# Hub_Moon

./: .gitignore  CHANGELOG.md  LICENSE  flake.nix  moondrop_control.py  moondrop_hub_reverse_engineering.md  pyproject.toml  readme.md  wrangler.toml
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml
gui/: __init__.py  app.py  controller.py  requirements.txt
gui/qml/: Main.qml
gui/qml/HubMoon/: BandEditor.qml  ComboBox.qml  ConfigsPage.qml  ConnectPage.qml  HubBtn.qml  ResponseGraph.qml  Stepper.qml  Sym.qml  Theme.qml  Toggle.qml  VSlider.qml  dsp.js  qmldir
packaging/: 70-moondrop.rules  PKGBUILD  PKGBUILD.local  README.md  build-appimage.sh  hub-moon.desktop  hub-moon.icns  hub-moon.iss  hub-moon.spec  nfpm.yaml  postinstall.sh  pyinstaller_entry.py
